# osso

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Dockerfile  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: Makefile  conf.py  index.rst  make.bat
etc/: ca.crt  ca.key  ca.pub  config.json
httpd/: osso.conf  osso.wsgi
osso/: __init__.py  api.py  auth.py  config.py  oidc.py  pki.py  saml.py  saml_exceptions.py  server.py
osso/templates/: saml_assertion.xml  saml_form.html  saml_info.html  saml_metadata.xml
osso/tests/: fakes.py
osso/tests/functional/: test_api.py
osso/tests/unit/: test_oidc.py
playbooks/: site.yml
playbooks/roles/idp/files/: osso.conf
playbooks/roles/idp/handlers/: main.yml
playbooks/roles/idp/tasks/: main.yml
playbooks/roles/sp/files/: attribute-map.xml  attribute-policy.xml
playbooks/roles/sp/handlers/: main.yml
playbooks/roles/sp/tasks/: main.yml
tools/: build.sh  key_setup.sh  rebuild_and_run.sh  rm.sh  run.sh
