[metadata]
name = osso
summary = Simple SAML 2.0 Server/Proxy
description-file =
    README.md
author = Kristi Nikolla
author-email = knikolla@bu.edu
home-page = https://github.com/knikolla/osso
classifier =
    Development Status :: 4 - Beta
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[global]
setup_hooks =
    pbr.hooks.setup_hook

[files]
packages =
    osso
    osso.templates
    osso.tests
data_files =
    /etc/osso = etc/*

[entry_points]
wsgi_scripts =
    osso = osso.api:get_application
